@@ -1,3 +1,13 @@
+2004-10-11  Dave McMurtrie  <davemcmurtrie@hotmail.com>
+
+	* config.c: Added foreground_mode option.
+
+	* imapproxy.h: Added foreground_mode option.
+
+	* main.c: Added foreground_mode option.
+
+	* imapproxy.conf: Added foreground_mode option.
+	
 2004-07-23  Dave McMurtrie  <davemcmurtrie@hotmail.com>
 
 	* Version 1.2.2 released. 
